--- a/cmd/webserver/templates/bundle.gohtml
+++ b/cmd/webserver/templates/bundle.gohtml
@@ -7,7 +7,7 @@
             <h1 class="text-truncate"><i class="fas fa-cubes"></i> {{ .Bundle.GetName }}</h1>
 
             <small>
-                <a href="{{ .Bundle.GetStoreLink }}" target="_blank">
+                <a href="{{ .Bundle.GetStoreLink }}" target="_blank" rel="noopener">
                     <i class="fas fa-shopping-cart"></i>
                     Store Page
                 </a>
