--- a/cmd/webserver/templates/chat.gohtml
+++ b/cmd/webserver/templates/chat.gohtml
@@ -4,11 +4,11 @@
     <div class="container" id="chat-page">
 
         <div class="jumbotron">
-            <a href="https://discord.gg/c5zrcus" target="_blank">
+            <a href="https://discord.gg/c5zrcus" target="_blank" rel="noopener">
                 <img src="/assets/img/discord.png" class="float-right" alt="Discord">
             </a>
             <h1><i class="fas fa-comments"></i> Chat</h1>
-            <p class="lead">See what's going on, on our <a target="_blank" href="https://discord.gg/c5zrcus">Discord chat server</a>.</p>
+            <p class="lead">See what's going on, on our <a target="_blank" rel="noopener" href="https://discord.gg/c5zrcus">Discord chat server</a>.</p>
         </div>
 
         {{ template "_flashes" . }}
