--- a/cmd/webserver/templates/donate.gohtml
+++ b/cmd/webserver/templates/donate.gohtml
@@ -8,15 +8,15 @@
             <p class="lead mb-2">{{ .Description }} Donations will go towards a new extra quick site-wide search,
                 high definition charts, tracking every currency, faster hosting & more!</p>
 
-            <a class="btn mb-1 mb-sm-0" role="button" href="https://www.patreon.com/bePatron?u=9962078" target="_blank" style="background-color: #f96854; color: #fff">
+            <a class="btn mb-1 mb-sm-0" role="button" href="https://www.patreon.com/bePatron?u=9962078" target="_blank" rel="noopener" style="background-color: #f96854; color: #fff">
                 <i class="fab fa-patreon"></i> Patreon
             </a>
 
-            <a class="btn mb-1 mb-sm-0" role="button" href="https://github.com/sponsors/Jleagle" target="_blank" style="background-color: #4078c0; color: #fff">
+            <a class="btn mb-1 mb-sm-0" role="button" href="https://github.com/sponsors/Jleagle" target="_blank" rel="noopener" style="background-color: #4078c0; color: #fff">
                 <i class="fab fa-github"></i> GitHub
             </a>
 
-            <a class="btn mb-1 mb-sm-0" role="button" href="https://paypal.me/jimeagle/15" target="_blank" style="background-color: #003087; color: #fff">
+            <a class="btn mb-1 mb-sm-0" role="button" href="https://paypal.me/jimeagle/15" target="_blank" rel="noopener" style="background-color: #003087; color: #fff">
                 <i class="fab fa-cc-paypal"></i> PayPal One Off
             </a>
 
