--- a/cmd/webserver/templates/api.gohtml
+++ b/cmd/webserver/templates/api.gohtml
@@ -7,7 +7,7 @@
 
             <h1><i class="fas fa-cloud-download-alt"></i> Game DB API</h1>
             <p class="lead">We are looking to open all the data we store.</p>
-            <p class="lead">The API is built with <a target="_blank" href="/api/openapi.json">Open API</a> so you can generate api clients in your language.</p>
+            <p class="lead">The API is built with <a target="_blank" rel="noopener" href="/api/openapi.json">Open API</a> so you can generate api clients in your language.</p>
             <div><small>If you need anything that is not in the API yet, please <a href="/contact">contact</a> me.</small></div>
             <div><small>To use the API, you need to upgrade your account. For the Steam API, see <a href="/steam-api">here</a>.</small></div>
 
@@ -50,7 +50,7 @@
                             <h4 class="card-header"><a href="#{{ slug .Summary }}">{{ .Summary }}</a></h4>
                             <div class="card-body">
 
-                                <form action="{{ $.Base }}{{ $pathKey }}" target="_blank" method="{{ $verb }}">
+                                <form action="{{ $.Base }}{{ $pathKey }}" target="_blank" rel="noopener" method="{{ $verb }}">
 
                                     <div class="input-group mb-2">
                                         <div class="input-group-prepend">
