--- a/cmd/webserver/templates/chat_bot.gohtml
+++ b/cmd/webserver/templates/chat_bot.gohtml
@@ -4,11 +4,11 @@
     <div class="container" id="chat-bot-page">
 
         <div class="jumbotron">
-            <a href="{{ .Link }}" target="_blank">
+            <a href="{{ .Link }}" target="_blank" rel="noopener">
                 <img src="/assets/img/discord.png" class="float-right" alt="Add Steam Discord Bot to your server" title="Add Steam Discord Bot to your server">
             </a>
             <h1><i class="fas fa-robot"></i> Steam Discord Bot</h1>
-            <p class="lead"><a href="{{ .Link }}" target="_blank">Add the Steam Discord Bot to your Discord server</a>.</p>
+            <p class="lead"><a href="{{ .Link }}" target="_blank" rel="noopener">Add the Steam Discord Bot to your Discord server</a>.</p>
             <small>Used on {{ .Guilds }}+ servers so far.</small>
         </div>
 
