--- a/cmd/webserver/templates/group.gohtml
+++ b/cmd/webserver/templates/group.gohtml
@@ -22,7 +22,7 @@
                 <p class="lead">{{ .Group.Headline }}</p>
             {{ end }}
             <small>
-                <a href="{{ .Group.GetURL }}" target="_blank"><i class="fas fa-link"></i> Steam Group Page</a>
+                <a href="{{ .Group.GetURL }}" target="_blank" rel="noopener"><i class="fas fa-link"></i> Steam Group Page</a>
 
                 {{ if eq .Group.Type "game" }}
                     <a href="/apps/{{ .Group.AppID }}"><i class="fas fa-gamepad"></i> App Page</a>
