--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -143,11 +143,11 @@
 
                             <a class="dropdown-item" href="/apps">Games</a>
                             <a class="dropdown-item" href="/upcoming">Upcoming</a>
-                            <a class="dropdown-item" href="/sales">Sales</a>
+                            <a class="dropdown-item" href="/sales">On Sale</a>
                             <a class="dropdown-item" href="/new-releases">New Releases</a>
                             {{/*<a class="dropdown-item" href="/apps/trending">Trending</a>*/}}
-                            <a class="dropdown-item" href="/achievements">Achievements</a>
-                            <a class="dropdown-item" href="/wishlists">Wishlists</a>
+                            <a class="dropdown-item" href="/achievements">Most Achievements</a>
+                            <a class="dropdown-item" href="/wishlists">Most Wishlists</a>
 
                             <div class="dropdown-divider"></div>
 
