--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -770,7 +770,7 @@
                                         <td class="img">
                                             <div class="icon-name">
                                                 <div class="icon">
-                                                    <img data-lazy="{{ .GetIcon }}" alt="" data-lazy-alt="{{ .GetName }}">
+                                                    <img src="" data-lazy="{{ .GetIcon }}" alt="" data-lazy-alt="{{ .GetName }}">
                                                 </div>
                                                 <div class="name">
                                                     {{ .GetName }}<br>
