--- a/cmd/webserver/templates/apps.gohtml
+++ b/cmd/webserver/templates/apps.gohtml
@@ -13,6 +13,7 @@
                 <div class="col-sm-12 col-lg-6">
 
                     <div class="input-group input-group-lg mt-1 mb-2">
+                        <label for="search" class="d-none"></label>
                         <input class="form-control" type="search" placeholder="Search for a Game" id="search" name="search" autofocus>
                         <div class="input-group-append">
                             <input type="submit" value="Search" class="input-group-text">
