--- a/cmd/webserver/templates/coop.gohtml
+++ b/cmd/webserver/templates/coop.gohtml
@@ -16,6 +16,7 @@
                     <form id="add">
                         <div class="input-group input-group-lg mt-1">
 
+                            <label for="id" class="d-none"></label>
                             <input class="form-control" type="number" placeholder="Add Player ID" autocomplete="off" autofocus id="id" required="required">
                             <div class="input-group-append">
                                 <input type="submit" value="Add" class="input-group-text btn btn-success">
