--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -152,6 +152,7 @@
                     <div class="card-body">
                         <form action="/players/add" method="post">
                             <div class="form-group">
+                                <label for="search" class="d-none"></label>
                                 <input type="search" class="form-control" id="search" name="search" placeholder="Steam URL / ID" required>
                             </div>
 
