--- a/cmd/webserver/templates/achievements.gohtml
+++ b/cmd/webserver/templates/achievements.gohtml
@@ -14,6 +14,7 @@
                 <div class="col-sm-12 col-lg-6">
 
                     <div class="input-group input-group-lg mt-1 mb-2">
+                        <label for="search" class="d-none">Search</label>
                         <input class="form-control" type="search" name="search" placeholder="Search for a Game" id="search" autofocus>
                         <div class="input-group-append">
                             <input type="submit" value="Search" class="input-group-text">
