--- a/cmd/webserver/templates/categories.gohtml
+++ b/cmd/webserver/templates/categories.gohtml
@@ -13,6 +13,7 @@
                 <div class="col-sm-12 col-lg-6">
 
                     <div class="input-group input-group-lg mt-1">
+                        <label for="search" class="d-none"></label>
                         <input class="form-control" id="search" type="search" name="search" placeholder="Search for a Category" required="required" autocomplete="off" autofocus>
                     </div>
 
