--- a/cmd/webserver/templates/product_keys.gohtml
+++ b/cmd/webserver/templates/product_keys.gohtml
@@ -20,12 +20,16 @@
                             <label class="col-form-label col-sm-2 pt-0">Product Type</label>
                             <div class="col-sm-10">
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="type" value="app" {{ if eq .Type "app" }}checked{{ end }}>
-                                    <label class="form-check-label" for="app">App</label>
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="radio" name="type" value="app" {{ if eq .Type "app" }}checked{{ end }}>
+                                        App
+                                    </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="type" value="package" {{ if eq .Type "package" }}checked{{ end }}>
-                                    <label class="form-check-label" for="package">Package</label>
+                                    <label class="form-check-label">
+                                        <input class="form-check-input" type="radio" name="type" value="package" {{ if eq .Type "package" }}checked{{ end }}>
+                                        Package
+                                    </label>
                                 </div>
                             </div>
                         </div>
