open in new tab

--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -215,7 +215,7 @@
                         <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">More</a>
                         <div class="dropdown-menu">
 
-                            <a class="dropdown-item" href="/discord-server">Discord Server</a>
+                            <a class="dropdown-item" href="/discord-server" target="_blank" rel="noopener">Discord Server</a>
                             <a class="dropdown-item" href="/contact">Contact</a>
                             <a class="dropdown-item" href="/experience">Experience Table</a>
                             <a class="dropdown-item" href="/info">Info</a>
