--- a/cmd/webserver/templates/info.gohtml
+++ b/cmd/webserver/templates/info.gohtml
@@ -16,7 +16,7 @@
                 <ul>
                     <li>Game DB has been my hobby since 2015.</li>
                     <li>Game DB is fully open sourced on <a href="https://github.com/gamedb" target="_blank" rel="noopener">GitHub</a>.</li>
-                    <li>Game DB gets all of its data from <a href="/steam-api">Steam APIs</a>, or <a href="https://github.com/SteamRE/SteamKit" target="_blank" rel="noopener">SteamKit</a>.</li>
+                    <li>Game DB gets all of its data from <a href="/steam-api">Steam APIs</a>, or <a href="https://github.com/SteamRE/SteamKit" target="_blank" rel="noopener">Steam PICS</a>.</li>
                 </ul>
 
                 <h6>Apps (Games)</h6>
