--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -27,7 +27,7 @@
 
                 <div class="card mb-4" id="players">
                     <div class="card-header">
-                        <h5 class="d-inline">Top Players</h5>
+                        <h5 class="d-inline">Top Players By:</h5>
                         <h5 class="float-right mb-0">
                             <span class="badge cursor-pointer badge-success" data-sort="level">Level</span>
                             <span class="badge cursor-pointer" data-sort="games">Games</span>
