--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -23,6 +23,72 @@
         {{/*        {{ end }}*/}}
 
         <div class="row">
+            <div class="col-12">
+
+                <div class="row" id="panels">
+                    <a class="col-12 col-sm-6 col-lg-4" href="/players">
+                        <div class="card mb-4">
+                            <div class="card-header">
+                                <h5 class="m-0">Player Ladders</h5>
+                            </div>
+                            <div class="card-body p-3">
+                                <p class="card-text">Who is the highest level on Steam, or who has the most games in your country?</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="col-12 col-sm-6 col-lg-4" href="/badges">
+                        <div class="card mb-4">
+                            <div class="card-header">
+                                <h5 class="m-0">Badge Ladders</h5>
+                            </div>
+                            <div class="card-body p-3">
+                                <p class="card-text">Who was the first to get max level on a Steam event, or who has the highest level foil badge.</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="col-12 col-sm-6 col-lg-4" href="/groups">
+                        <div class="card mb-4">
+                            <div class="card-header">
+                                <h5 class="m-0">Group Ladders</h5>
+                            </div>
+                            <div class="card-body p-3">
+                                <p class="card-text">Which groups have the most members, or which groups are trending the quickest?</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="col-12 col-sm-6 col-lg-4" href="/apps">
+                        <div class="card mb-4">
+                            <div class="card-header">
+                                <h5 class="m-0">Game Ladders</h5>
+                            </div>
+                            <div class="card-body p-3">
+                                <p class="card-text">Which game has the highest followers, peak players, review score, achievement count etc.</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="col-12 col-sm-6 col-lg-4" href="/apps">
+                        <div class="card mb-4">
+                            <div class="card-header">
+                                <h5 class="m-0">Game Database</h5>
+                            </div>
+                            <div class="card-body p-3">
+                                <p class="card-text">See which upcoming or newly released games have the largest following.</p>
+                            </div>
+                        </div>
+                    </a>
+                    <a class="col-12 col-sm-6 col-lg-4" href="/donate">
+                        <div class="card mb-4">
+                            <div class="card-header">
+                                <h5 class="m-0">Open Source</h5>
+                            </div>
+                            <div class="card-body p-3">
+                                <p class="card-text">Game DB is fulled open source and runs off donations.</p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+            </div>
             <div class="col-12 col-lg-8">
 
                 <div class="card mb-4" id="players">
