--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -230,13 +230,13 @@
 
                 </div>
 
-                <div class="card mb-4">
-                    <h5 class="card-header">{{ .Spotlight.Title }}</h5>
-                    <div class="card-body">
-                        <p class="mb-1">{{ .Spotlight.Text }}</p>
-                        <a href="{{ .Spotlight.Link }}">Check it out</a>
-                    </div>
-                </div>
+                {{/*                <div class="card mb-4">*/}}
+                {{/*                    <h5 class="card-header">{{ .Spotlight.Title }}</h5>*/}}
+                {{/*                    <div class="card-body">*/}}
+                {{/*                        <p class="mb-1">{{ .Spotlight.Text }}</p>*/}}
+                {{/*                        <a href="{{ .Spotlight.Link }}">Check it out</a>*/}}
+                {{/*                    </div>*/}}
+                {{/*                </div>*/}}
 
                 <div class="card border-0" id="new-releases">
                     <div class="card-header">
