--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -159,36 +159,36 @@
                     </div>
                 </div>
 
-                <div class="card mb-4" id="prices">
-                    <div class="card-header">
-                        <h5 class="d-inline">Price Drops</h5>
-                        <h5 class="float-right mb-0">
-                            <span class="badge badge-secondary" id="live-badge">Live</span>
-                        </h5>
-                    </div>
-                    <div class="card-body">
+                {{/*                <div class="card mb-4" id="prices">*/}}
+                {{/*                    <div class="card-header">*/}}
+                {{/*                        <h5 class="d-inline">Price Drops</h5>*/}}
+                {{/*                        <h5 class="float-right mb-0">*/}}
+                {{/*                            <span class="badge badge-secondary" id="live-badge">Live</span>*/}}
+                {{/*                        </h5>*/}}
+                {{/*                    </div>*/}}
+                {{/*                    <div class="card-body">*/}}
 
-                        <div class="table-responsive">
-                            <table class="table table-hover table-striped mb-0">
-                                <thead class="thead-light">
-                                <tr>
-                                    <th>Game</th>
-                                    <th>Price</th>
-                                    <th>Discount</th>
-                                    <th>When</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                </tbody>
-                                <tfoot>
-                                <tr>
-                                    <td colspan="4"><a href="/price-changes">More Price Changes</a></td>
-                                </tr>
-                                </tfoot>
-                            </table>
-                        </div>
-                    </div>
-                </div>
+                {{/*                        <div class="table-responsive">*/}}
+                {{/*                            <table class="table table-hover table-striped mb-0">*/}}
+                {{/*                                <thead class="thead-light">*/}}
+                {{/*                                <tr>*/}}
+                {{/*                                    <th>Game</th>*/}}
+                {{/*                                    <th>Price</th>*/}}
+                {{/*                                    <th>Discount</th>*/}}
+                {{/*                                    <th>When</th>*/}}
+                {{/*                                </tr>*/}}
+                {{/*                                </thead>*/}}
+                {{/*                                <tbody>*/}}
+                {{/*                                </tbody>*/}}
+                {{/*                                <tfoot>*/}}
+                {{/*                                <tr>*/}}
+                {{/*                                    <td colspan="4"><a href="/price-changes">More Price Changes</a></td>*/}}
+                {{/*                                </tr>*/}}
+                {{/*                                </tfoot>*/}}
+                {{/*                            </table>*/}}
+                {{/*                        </div>*/}}
+                {{/*                    </div>*/}}
+                {{/*                </div>*/}}
 
                 <div class="card mb-4 mb-lg-0" id="news">
                     <div class="card-header">
