--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -243,7 +243,7 @@
                         <h5>Popular New Releases</h5>
                     </div>
                     <div class="card-body p-0">
-                        <div class="row">
+                        <div class="row no-gutters">
                             {{ range $key, $value := .Games }}
                                 <div class="col-12 col-sm-6 col-lg-12">
                                     <a href="{{ .GetPath }}">
