--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -191,9 +191,7 @@
                 {{/*                </div>*/}}
 
                 <div class="card mb-4 mb-lg-0" id="news">
-                    <div class="card-header">
-                        <h5>Popular Game News</h5>
-                    </div>
+                    <h5 class="card-header">Popular Game News</h5>
                     <div class="card-body">
                         <ul class="list-unstyled">
 
@@ -239,9 +237,7 @@
                 {{/*                </div>*/}}
 
                 <div class="card border-0" id="new-releases">
-                    <div class="card-header">
-                        <h5>Popular New Releases</h5>
-                    </div>
+                    <h5 class="card-header">Popular New Releases</h5>
                     <div class="card-body p-0">
                         <div class="row no-gutters">
                             {{ range $key, $value := .Games }}
