--- a/cmd/webserver/templates/players.gohtml
+++ b/cmd/webserver/templates/players.gohtml
@@ -7,7 +7,7 @@
             <div class="row">
                 <div class="col-sm-12 col-lg-6">
 
-                    <h1><i class="fas fa-users"></i> Players</h1>
+                    <h1><i class="fas fa-user-friends"></i> Players</h1>
 
                 </div>
                 <div class="col-sm-12 col-lg-6">
