--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -82,7 +82,7 @@
                                 <h5 class="m-0">Open Source</h5>
                             </div>
                             <div class="card-body p-3">
-                                <p class="card-text">Game DB is fulled open source and runs off donations.</p>
+                                <p class="card-text">Game DB is fully open source and runs off donations.</p>
                             </div>
                         </div>
                     </a>
