--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -28,9 +28,7 @@
                 <div class="row" id="panels">
                     <a class="col-12 col-sm-6 col-lg-4" href="/players">
                         <div class="card mb-4">
-                            <div class="card-header">
-                                <h5 class="m-0">Player Ladders</h5>
-                            </div>
+                            <h5 class="card-header"><i class="fas fa-user-friends"></i> Player Ladders</h5>
                             <div class="card-body p-3">
                                 <p class="card-text">Who is the highest level on Steam, or who has the most games in your country?</p>
                             </div>
@@ -38,9 +36,7 @@
                     </a>
                     <a class="col-12 col-sm-6 col-lg-4" href="/badges">
                         <div class="card mb-4">
-                            <div class="card-header">
-                                <h5 class="m-0">Badge Ladders</h5>
-                            </div>
+                            <h5 class="card-header"><i class="fas fa-ribbon"></i> Badge Ladders</h5>
                             <div class="card-body p-3">
                                 <p class="card-text">Who was the first to get max level on a Steam event, or who has the highest level foil badge.</p>
                             </div>
@@ -48,9 +44,7 @@
                     </a>
                     <a class="col-12 col-sm-6 col-lg-4" href="/groups">
                         <div class="card mb-4">
-                            <div class="card-header">
-                                <h5 class="m-0">Group Ladders</h5>
-                            </div>
+                            <h5 class="card-header"><i class="fas fa-users"></i> Group Ladders</h5>
                             <div class="card-body p-3">
                                 <p class="card-text">Which groups have the most members, or which groups are trending the quickest?</p>
                             </div>
@@ -58,9 +52,7 @@
                     </a>
                     <a class="col-12 col-sm-6 col-lg-4" href="/apps">
                         <div class="card mb-4">
-                            <div class="card-header">
-                                <h5 class="m-0">Game Ladders</h5>
-                            </div>
+                            <h5 class="card-header"><i class="fas fa-gamepad"></i> Game Ladders</h5>
                             <div class="card-body p-3">
                                 <p class="card-text">Which game has the highest followers, peak players, review score, achievement count etc.</p>
                             </div>
@@ -68,9 +60,7 @@
                     </a>
                     <a class="col-12 col-sm-6 col-lg-4" href="/apps">
                         <div class="card mb-4">
-                            <div class="card-header">
-                                <h5 class="m-0">Game Database</h5>
-                            </div>
+                            <h5 class="card-header"><i class="fas fa-gamepad"></i> Game Database</h5>
                             <div class="card-body p-3">
                                 <p class="card-text">See which upcoming or newly released games have the largest following.</p>
                             </div>
@@ -78,9 +68,7 @@
                     </a>
                     <a class="col-12 col-sm-6 col-lg-4" href="/donate">
                         <div class="card mb-4">
-                            <div class="card-header">
-                                <h5 class="m-0">Open Source</h5>
-                            </div>
+                            <h5 class="card-header"><i class="fas fa-heart text-danger"></i> Open Source</h5>
                             <div class="card-body p-3">
                                 <p class="card-text">Game DB is fully open source and runs off donations.</p>
                             </div>
