--- a/cmd/webserver/templates/apps.gohtml
+++ b/cmd/webserver/templates/apps.gohtml
@@ -23,7 +23,7 @@
                 </div>
                 <div class="col-12">
                     <small id="presets">
-                        <a href="/apps?types=game&price-low=0.00&price-high=0.00">Free Games</a>,
+                        <a href="/apps?types=game&price=0.00&price=0.00">Free Games</a>,
                         <a href="/apps?platforms=linux">Linux Games</a>,
                         <a href="/apps?developers=3589">Valve Games</a>,
                         <a href="/apps?tags=5153">Kickstarted Games</a>,
