Update home panels

--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -34,11 +34,11 @@
                             </div>
                         </div>
                     </a>
-                    <a class="col-12 col-sm-6 col-lg-4" href="/badges">
+                    <a class="col-12 col-sm-6 col-lg-4" href="/apps">
                         <div class="card mb-4">
-                            <h5 class="card-header"><i class="fas fa-ribbon"></i> Badge Ladders</h5>
+                            <h5 class="card-header"><i class="fas fa-gamepad"></i> Game Ladders</h5>
                             <div class="card-body p-3">
-                                <p class="card-text">Who was the first to get max level on a Steam event, or who has the highest level foil badge.</p>
+                                <p class="card-text">Which game has the highest followers, peak players, review score, achievements count etc.</p>
                             </div>
                         </div>
                     </a>
@@ -50,17 +50,17 @@
                             </div>
                         </div>
                     </a>
-                    <a class="col-12 col-sm-6 col-lg-4" href="/apps">
+                    <a class="col-12 col-sm-6 col-lg-4" href="/badges">
                         <div class="card mb-4">
-                            <h5 class="card-header"><i class="fas fa-gamepad"></i> Game Ladders</h5>
+                            <h5 class="card-header"><i class="fas fa-ribbon"></i> Badge Ladders</h5>
                             <div class="card-body p-3">
-                                <p class="card-text">Which game has the highest followers, peak players, review score, achievement count etc.</p>
+                                <p class="card-text">Who was the first to get max level on a Steam event, or who has the highest level foil badge.</p>
                             </div>
                         </div>
                     </a>
                     <a class="col-12 col-sm-6 col-lg-4" href="/apps">
                         <div class="card mb-4">
-                            <h5 class="card-header"><i class="fas fa-gamepad"></i> Game Database</h5>
+                            <h5 class="card-header"><i class="fas fa-gamepad"></i> Games Database</h5>
                             <div class="card-body p-3">
                                 <p class="card-text">See which upcoming or newly released games have the largest following.</p>
                             </div>
@@ -70,7 +70,7 @@
                         <div class="card mb-4">
                             <h5 class="card-header"><i class="fas fa-heart text-danger"></i> Open Source</h5>
                             <div class="card-body p-3">
-                                <p class="card-text">Game DB is fully open source and runs off donations.</p>
+                                <p class="card-text">Game DB is fully open sourced and runs off of donations.</p>
                             </div>
                         </div>
                     </a>
