--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -66,14 +66,26 @@
                             </div>
                         </div>
                     </a>
-                    <a class="col-12 col-sm-6 col-lg-4" href="/donate">
+                    <div class="col-12 col-sm-6 col-lg-4">
                         <div class="card mb-4">
-                            <h5 class="card-header"><i class="fas fa-heart text-danger"></i> Open Source</h5>
-                            <div class="card-body p-3">
-                                <p class="card-text">Game DB is fully open sourced and runs off of donations.</p>
+                            <h5 class="card-header"><i class="fas fa-user"></i> Player Search</h5>
+                            <div class="card-body">
+                                <form action="/players/add" method="post">
+
+                                    <div class="input-group">
+                                        <label for="search" class="d-none"></label>
+                                        <input type="search" class="form-control" id="search" name="search" placeholder="Steam URL / ID" required>
+
+                                        <div class="input-group-append">
+                                            <button type="submit" class="btn btn-success" aria-label="Search">Search</button>
+                                        </div>
+                                    </div>
+
+                                </form>
                             </div>
+
                         </div>
-                    </a>
+                    </div>
                 </div>
 
             </div>
@@ -200,21 +212,6 @@
 
             </div>
             <div class="col-12 col-lg-4">
-
-                <div class="card mb-4">
-                    <h5 class="card-header">Player Search</h5>
-                    <div class="card-body">
-                        <form action="/players/add" method="post">
-                            <div class="form-group">
-                                <label for="search" class="d-none"></label>
-                                <input type="search" class="form-control" id="search" name="search" placeholder="Steam URL / ID" required>
-                            </div>
-
-                            <button type="submit" class="btn btn-success" aria-label="Search">Search</button>
-                        </form>
-                    </div>
-
-                </div>
 
                 {{/*                <div class="card mb-4">*/}}
                 {{/*                    <h5 class="card-header">{{ .Spotlight.Title }}</h5>*/}}
