--- a/cmd/webserver/templates/app_reviews.gohtml
+++ b/cmd/webserver/templates/app_reviews.gohtml
@@ -9,7 +9,7 @@
                         {{ .VotesGood }} <i class="fas fa-thumbs-up" data-toggle="tooltip" data-placement="top" title="Good Review"></i>
                         {{ .VotesFunny }} <i class="fas fa-grin-squint-tears" data-toggle="tooltip" data-placement="top" title="Funny Review"></i>
                     </div>
-                    By <a href="{{.PlayerPath}}" rel="nofollow">{{.PlayerName}}</a> on {{ .Created }}
+                    By <a href="{{.PlayerPath}}">{{.PlayerName}}</a> on {{ .Created }}
                 </div>
                 <div class="card-body">{{ .HTML }}</div>
             </div>
