--- a/cmd/webserver/templates/groups.gohtml
+++ b/cmd/webserver/templates/groups.gohtml
@@ -60,7 +60,7 @@
                         <tr>
                             <th scope="col">Name</th>
                             <th scope="col">Members</th>
-                            <th scope="col">Trend Value</th>
+                            <th scope="col">Trend</th>
                             <th scope="col"></th>
                         </tr>
                         </thead>
