--- a/cmd/webserver/templates/info.gohtml
+++ b/cmd/webserver/templates/info.gohtml
@@ -24,7 +24,7 @@
                     <li>Apps are updated instantly when the developer makes a change.</li>
                     <li>App review scores are calculated using <a href="https://en.wikipedia.org/wiki/Additive_smoothing" target="_blank" rel="noopener">Additive Smoothing</a>.</li>
                     <li>App twitch counts only include the 100 streamers for that app.</li>
-                    <li>App trend values currently use the algorithm taken from <a href="https://stackoverflow.com/a/49604913/472084" target="_blank" rel="noopener">this post</a>.</li>
+                    <li>App trends are currently calculated use the algorithm taken from <a href="https://stackoverflow.com/a/49604913/472084" target="_blank" rel="noopener">this post</a>.</li>
                 </ul>
 
                 <h6>Bundles</h6>
