--- a/cmd/webserver/templates/trending_apps.gohtml
+++ b/cmd/webserver/templates/trending_apps.gohtml
@@ -22,8 +22,8 @@
                             <th scope="col">App</th>
                             <th scope="col">Price</th>
                             <th scope="col">Players</th>
-                            <th scope="col" nowrap="nowrap">Trend Value</th>
-                            <th scope="col" nowrap="nowrap">Trend Line</th>
+                            <th scope="col" nowrap="nowrap">Trend</th>
+                            <th scope="col" nowrap="nowrap">Trend</th>
                         </tr>
                         </thead>
                         <tbody>
