--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -30,7 +30,7 @@
                         <div class="card mb-4">
                             <h5 class="card-header"><i class="fas fa-user-friends"></i> Player Ladders</h5>
                             <div class="card-body p-3">
-                                <p class="card-text">Who is the highest level on Steam, or who has the most games in your country?</p>
+                                <p class="card-text">Who is the highest level on Steam, or who has the most games in your country or state?</p>
                             </div>
                         </div>
                     </a>
